
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/zone_text"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zasięg:"
        style="@style/Base.TextAppearance.AppCompat.Medium" />


    <SeekBar
        android:id="@+id/zone_button"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="20"
        />


    <Button
        android:id="@+id/city_button"
        android:text="@string/city"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="170dp"
        android:layout_height="90dp"
        />
    <Button
        android:id="@+id/bike_button"
        android:text="@string/bike"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="170dp"
        android:layout_height="90dp"
        />
    <Button
        android:id="@+id/parking_button"
        android:text="@string/parking"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="170dp"
        android:layout_height="90dp"
        />

</LinearLayout>
